--- a/egbib.bib
+++ b/egbib.bib
@@ -836,3 +836,30 @@ url = {http://papers.nips.cc/paper/7007-a-unified-game-theoretic-approach-to-mul
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
+@article{article,
+author = {Sasaki, Yutaka},
+year = {2007},
+month = {01},
+pages = {},
+title = {The truth of the F-measure},
+journal = {Teach Tutor Mater}
+}
+@article{Krishna:2017:VGC:3088990.3089101,
+ author = {Krishna, Ranjay and Zhu, Yuke and Groth, Oliver and Johnson, Justin and Hata, Kenji and Kravitz, Joshua and Chen, Stephanie and Kalantidis, Yannis and Li, Li-Jia and Shamma, David A. and Bernstein, Michael S. and Fei-Fei, Li},
+ title = {Visual Genome: Connecting Language and Vision Using Crowdsourced Dense Image Annotations},
+ journal = {Int. J. Comput. Vision},
+ issue_date = {May       2017},
+ volume = {123},
+ number = {1},
+ month = may,
+ year = {2017},
+ issn = {0920-5691},
+ pages = {32--73},
+ numpages = {42},
+ url = {https://doi.org/10.1007/s11263-016-0981-7},
+ doi = {10.1007/s11263-016-0981-7},
+ acmid = {3089101},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Attributes, Computer vision, Crowdsourcing, Dataset, Image, Knowledge, Language, Objects, Question answering, Relationships, Scene graph},
+}
