--- a/iccv2019.tex
+++ b/iccv2019.tex
@@ -9,7 +9,7 @@
 \graphicspath{{figures/}}
 \usepackage{makecell}
 \usepackage{flushend}
-
+\usepackage{float}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{color}
@@ -61,10 +61,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{
-	%Visual Question Answering with Question Understanding and Reasoning
-	Learning Question-oriented Vision for Generalizable VQA
-}
+\title{Learning Question-oriented Vision towards Generalizable VQA}
 
 \author{First Author\\
 Institution1\\
@@ -88,7 +85,7 @@ First line of institution2 address\\
 
 %%%%%%%%% ABSTRACT
 \begin{abstract}
-Traditional techniques for visual question answering (\vqa) are mostly end-to-end neural network based, which often perform poorly (\eg inefficiency and low accuracy) due to lack of question understanding and necessary reasoning. To overcome the weaknesses, we propose a comprehensive approach with following key features. (1) It represents inputs, \ie image {\cal I}mg and question $\nlq$ as entity-attribute graph and query graph, respectively, and employs graph matching to find answers; (2) it leverages reinforcement learning based model to identify correct query graph, and a set of policies that are used to guide visual tasks, based on $\nlq$; and (3) it trains a classifier and reasons missing values that are crucial for question answering with the classifier. With these features, our approach can not only conduct visual tasks more efficiently, but also answer questions with higher accuracy; better still, our approach also works in an end-to-end manner, owing to seamless integration of our techniques. To evaluate the performance of our approach, we conduct empirical studies on our \vqa data set (Soccer-VQA) and Visual-Genome data set~\cite{visualgenome}, and show that our approach outperforms the state-of-the-art method in both efficiency and accuracy. 
+Traditional techniques for visual question answering (\vqa) are mostly end-to-end neural network based, which often perform poorly (\eg inefficiency and low accuracy) due to lack of question understanding and necessary reasoning. To overcome the weaknesses, we propose a comprehensive approach with following key features. (1) It represents inputs, \ie image {\cal I}mg and question $\nlq$ as entity-attribute graph and query graph, respectively, and employs graph matching to find answers; (2) it leverages reinforcement learning based model to identify correct query graph, as well as a set of policies that are used to guide visual tasks, based on $\nlq$; and (3) it trains a classifier and reasons missing values that are crucial for question answering with the classifier. With these features, our approach can not only conduct visual tasks more efficiently, but also answer questions with higher accuracy; better still, our approach also works in an end-to-end manner, owing to seamless integration of our techniques. To evaluate the performance of our approach, we conduct empirical studies on Soccer-VQA~\cite{peixi2019} and Visual-Genome~\cite{Krishna:2017:VGC:3088990.3089101}, and show that our approach outperforms the state-of-the-art methods in both efficiency and accuracy. 
 \eat{
 Visual Question Answering (\vqa) is of great significance in offering people convenience: one can raise a question for details of objects, or high-level understanding about the scene, over an image. 
 This paper proposes a novel method to address the \vqa problem. In contrast to prior works, our method that targets single scene \vqa, replies on graph-based techniques and involves reasoning. In a nutshell, our approach is centered on three graphs. The first graph, referred to as inference graph $G_I$, is constructed via learning over labeled data. The other two graphs, referred to as query graph $Q$ and entity-attribute graph $\eag$, are generated from natural language query $\nlq$ and image {\cal I}mg, that are issued from users, respectively. As $\eag$ often does not take sufficient information to answer $Q$, we develop techniques to infer missing information of $\eag$ with $G_I$. Based on $\eag$ and $Q$, we provide techniques to find matches of $Q$ in $\eag$, as the answer of $\nlq$ in {\cal I}mg. Unlike commonly used 
@@ -98,6 +95,12 @@ This paper proposes a novel method to address the \vqa problem. In contrast to p
 
 %%%%%%%%% BODY TEXT
 \input{./sections/sec-intro}
+\begin{figure*}[tb!] %tb!
+\vspace{-1ex}
+\centerline{\includegraphics[scale=0.25]{overview.eps}}
+\caption{Overview of our approach and question-oriented processing strategy} \label{fig-overview}
+\vspace{-2ex}
+\end{figure*}
 \input{./sections/sec-related}
 \input{./sections/sec-overview}
 \input{./sections/sec-obj}
