--- a/sections/sec-conclusion.tex
+++ b/sections/sec-conclusion.tex
@@ -4,7 +4,7 @@
 %In this paper we propose an innovative approach for visual query answering task. Differentfrom end-to-end neural network based system, our approach reconstructs inputs as entity-attribute graph and pattern query, based on imageImgand question,respectively. Moreover, the answer is found by graph matching. Reinforcement learning is adopted in our approach to identify optimal policies for guiding visual tasksand to select corresponding pattern query. Last but not the least, our approach is able to reason missing information which is crucial for question answering. Experimental results show that the accuracy of our approach reasonably out performs state-of-the-art methods. Furthermore, the proposed approach is able to balanceeffectiveness and efficiency.
 
 
-In this paper, we propose an innovative and efficient approach to handling the \vqa problem. In the proposed method, the inputs (image and question) are first converted into entity-attribute graph and query graph, respectively; then the reinforcement learning based technique is utilized to identify correct query graph and related policies for visual processing; if information extracted from image is not sufficient to answer the question, an inference module will be invoked to infer crucial missing values; the final result will be computed by a module based on graph matching. Experimental studies show that our approach not only owns good generalization and inference ability, but also corroborates the efficiency and high accuracy when compared with other state-of-the-art baseline methods on two private and public \vqa data sets. The problem of \vqa has been widely studied while with slight satisfaction. We are currently exploring integrating external knowledge base to answer even more complex questions; another topic for future work is to develop techniques to automatically generate query graphs by using query logs. \looseness=-1
+In this paper, we propose an innovative and efficient approach to handling the \vqa problem. In the proposed method, the inputs (image and question) are first converted into entity-attribute graph and query graph, respectively; then the reinforcement learning based technique is utilized to identify correct query graph and related policies for visual processing; if information extracted from image is not sufficient to answer the question, an inference module will be invoked to infer crucial missing values; the final result will be computed by a module based on graph matching. Experimental studies show that our approach not only owns good generalization and inference ability, but also corroborates the efficiency and high accuracy when compared with other state-of-the-art baseline methods on both domain-specific and general \vqa data sets. The problem of \vqa has been widely studied while with slight satisfaction. We are currently exploring integrating external knowledge base to answer even more complex questions; another topic for future work is to develop techniques to automatically generate query graphs by using query logs. \looseness=-1
 
 
 \eat{
