--- a/sections/sec-expt.tex
+++ b/sections/sec-expt.tex
@@ -6,10 +6,10 @@ In this section, we conduct four sets of experiments to evaluate (1) the general
 
 \stitle{Experimental Setting}. %We report settings of experimental studies. 
 
-\etitle{DataSet}. We used two data sets: (1) \kw{Soccer}~\cite{peixi2019} that we annotated; and (2) Visual-Genome~\cite{visualgenome}, one typical \vqa dataset. Over Visual-Genome dataset, we extracted 2852 images with subjects of baseball, tennis and soccer. 
-For each dataset, we split it into two parts: Part$_I$, which accounts for 1/3 and used for testing, and Part$_{II}$ that accounts for 2/3 and used for training.   
+\etitle{DataSet}. We used two data sets: (1) \kw{Soccer} which is a well annotated soccer dataset with reasoning; and (2) Visual-Genome, one typical \vqa dataset. Over Visual-Genome dataset, we extracted 2852 images with subjects of baseball, tennis and soccer. 
+For each dataset, we split it into two parts: Part$_I$, which accounts for 1/3 and are used for testing, and Part$_{II}$ that accounts for 2/3 and are used for training.   
 
-\etitle{Questions}. We used two sets of questions: (1) the set of questions, listed in \cref{table:questions} for \kw{Soccer}; and (2) another set of questions for Visual-Genome. The questions for Visual-Genome are generated as following. We went over questions posed on Visual-Genome, extracted three kinds of typical questions, \ie ``what'', ``how many'' and ``where'' as base questions, and constructed in total 1179 questions with base questions, where 869 for ``what'' type, 259 for ``how many'' type, and 51 for ``where'' type. 
+\etitle{Questions}. We used two sets of questions: (1) the set of questions for \kw{Soccer}, we adapted and augmented with more testing questions as indicated in bold fonts in \Cref{table:questions}; and (2) another set of questions for Visual-Genome. The questions for Visual-Genome are generated as following. We went over questions posed on Visual-Genome, extracted three kinds of typical questions, \ie ``what'', ``how many'' and ``where'' as base questions, and constructed in total 1179 questions with base questions, where 869 for ``what'' type, 259 for ``how many'' type, and 51 for ``where'' type. 
 
 %==========Table===================
 \begin{table}[thb]
@@ -27,13 +27,13 @@ For each dataset, we split it into two parts: Part$_I$, which accounts for 1/3 a
 			$Q_{nl_5}$  & Who is the defending team?                         & Medium       \\ \hline
 			$Q_{nl_6}$  & Which part of the field are the players being now? & Hard       \\ \hline
 			$Q_{nl_7}$  & How many players are there in the image?           & Hard     \\ \hline
-			$Q_{nl_8}$  & {\color{red}Is this image about corner kick?}                   & 
+			$Q_{nl_8}$  & \textbf{Is this image about corner kick?}                  & Medium
 			\\ \hline
-			$Q_{nl_9}$  & Is this image about penalty kick?                   & 
+			$Q_{nl_9}$  & \textbf{Is this image about penalty kick?}                   & Medium
 			\\ \hline
-			$Q_{nl_10}$  & Is this image about kick off?                     & 
+			$Q_{nl_10}$  & \textbf{Is this image about kick off?}                     & Medium
 			\\ \hline
-			$Q_{nl_{11}}$  & Is this image about free kick?                  & 
+			$Q_{nl_{11}}$  & \textbf{Is this image about free kick?}                 & Medium
 			\\ \hline
 			\eat{
 			\multirow{2}{*}{$Q_{nl_8}$ }
@@ -57,7 +57,7 @@ For each dataset, we split it into two parts: Part$_I$, which accounts for 1/3 a
 \end{table}
 %==========Table===================
 
-
+\vspace{-3ex}
 \subsection{Generalization Ability of the Model}
 
 To show the generalization ability of our model, we compared accuracy of our model with state-of-the-art methods CNN+LSTM~\cite{VQA}, HieCoAttenVQA~\cite{Lu2016Hie} and Learning2Reason~\cite{hu2017learning}, via changes of training data. For comparison purpose, we enrich training data with those questions taking the same semantic meaning. For example, besides $Q_{nl5}$, we add following questions: \textit{``Who is attacking team?''}, \textit{``What is the uniform color of the defending team?''} and \textit{``What is the uniform color of the attacking team?''}, that have the same semantic meaning as $Q_{nl5}$ in training data. As shown in \cref{table:genralization}, our model always outperforms others, and moreover, is influenced least by varied training data, than other methods. The reason is that all the visual task selection is question oriented, which leads to unfixed network structure, also, the graph-based method preserves better reasoning capability, comparing with memorizing statistic correlations between images and answers.
@@ -87,7 +87,7 @@ To test the generalization of our method, we enlarge the training set by more va
 Efficiency is one crucial factor to evaluate the performance of a \vqa model. 
 In light of this, we evaluate the running time over accuracy by using state-of-the-art methods CNN+LSTM~\cite{VQA} HieCoAttenVQA~\cite{Lu2016Hie}, Learning2Reason~\cite{hu2017learning} and AllTasks~\cite{peixi2019}. To measure the efficiency of \vqa models, we use ``CPU Time'' to represent the total running time of entire progress of question answering. 
 
-The results shown in \cref{fig:TimevsAcc} tell us that: (1) state-of-the-art methods perform efficiently, with running time less than 300 milliseconds, while their accuracy are all below 40\%, showing that the methods are not applicable in practice; (2) AllTasks always has the highest and steady accuracy, \eg 65.86\%, since it processes all the visual related tasks without selection, paying the price of unexpected and long running time; and (3) our module finds a balance between efficiency and accuracy. For example, with $\gamma=0.99$, our reinforcement learning based module spends, on average, 680 ms to answer questions, with accuracy 64.02\%, which is 35.88\%, 32.10\% and 26.02\% higher than that of CNN+LSTM, HieCoAttenVQA, and Learning2Reason, respectively. Moreover, when running time decreases, the accuracy decreases either, which is as expected.
+The results shown in \Cref{fig:TimevsAcc} tells us that: (1) state-of-the-art methods perform efficiently, with running time less than 300 milliseconds, while their accuracy are all below 40\%, showing that the methods are not applicable in practice; (2) AllTasks always has the highest and steady accuracy, \eg 65.86\%, since it processes all the visual related tasks without selection, paying the price of unexpected and long running time; and (3) our module finds a balance between efficiency and accuracy. For example, with $\gamma=0.99$, our reinforcement learning based module spends, on average, 680 ms to answer questions, with accuracy 64.02\%, which is 35.88\%, 32.10\% and 26.02\% higher than that of CNN+LSTM, HieCoAttenVQA, and Learning2Reason, respectively. Moreover, when running time decreases, the accuracy decreases either, which is as expected.
 
 \begin{figure}[h]
 	\begin{center}
@@ -145,15 +145,20 @@ The results shown in \cref{fig:TimevsAcc} tell us that: (1) state-of-the-art met
 
 Accuracy is another crucial performance criteria of \vqa systems. In contrast to end-to-end systems, the accuracy of our model is partly influenced by the inference quality. Hence, it is of great importance to see how accuracy is influenced by our inference module (\kw{VI}). Prior work~\cite{peixi2019} already showed performance of their inference module \wrt a set of fixed questions on Soccer dataset. Here, we learn an inference graph for questions $Q_{nl8},Q_{nl9},Q_{nl10}$ and $Q_{nl11}$ regarding field scene from Soccer dataset, and a set of inference graphs for answering questions on Visual-Genome dataset. \looseness=-1
 
-To evaluate accuracy, we follow F-measure~\cite{Fmeasure}, and define our accuracy metric as following:
+To evaluate accuracy, we follow F-measure~\cite{article}\eat{~\cite{Fmeasure}}, and define our accuracy metric as following:
+\begin{small}
 \begin{equation*}
 \kw{Acc}=\frac{2\cdot (\kw{recall}\cdot \kw{precision})}{(\kw{recall}+\kw{precision})}
 \end{equation*}
+\end{small}
 where:
+\begin{small}
 \begin{equation*}
 \scriptsize
 \kw{recall}= \frac{\#\kw{true}\_\kw{value}\_\kw{inferred}}{\#\kw{true}\_\kw{value}\_\kw{instance}},~ \kw{precision}=\frac{\#\kw{true}\_\kw{value}\_\kw{inferred}}{\#\kw{inferred}\_\kw{instance}}
 \end{equation*}
+\end{small}
+%\vspace{-2ex}
 Here, $\#\kw{true}\_\kw{value}\_\kw{inferred}$ is the number of all the instances, whose attribute $A$ is inferred correctly as $``v"$,  $\#\kw{true}\_\kw{value}\_\kw{instance}$ is the number of all the instances with attribute $A$ of value $``v"$, and $\#\kw{inferred}\_\kw{instance}$ indicates the total number of instances whose attribute $A$ is inferred as $``v"$. \looseness=-1
 
 
@@ -268,7 +273,7 @@ As can be seen, the inference accuracy of corner kick, free kick, kick-off and p
 %==========Table===================
 
 
-In addition, we compare our approach with NuSVC, MLP, and AdaBoost in \cref{tab:AccFieldCmp}. The results show that the average accuracy of our approach is higher than that of NuSVC and AdaBoost by 4.49\% and 5.97\% respectively, and slightly better than that of MLP.
+In addition, we compare our inference model with NuSVC, MLP, and AdaBoost in \Cref{tab:AccFieldCmp}. The results show that the average inference accuracy of our approach is higher than that of NuSVC and AdaBoost by 4.49\% and 5.97\% respectively, and slightly better than that of MLP. \looseness=-1
 
 %==========Table===================
 \begin{table}[htbp]
@@ -310,7 +315,7 @@ In addition, we compare our approach with NuSVC, MLP, and AdaBoost in \cref{tab:
 We compare our approach with the following state-of-the-art methods: CNN+LSTM, HieCoAttenVQA, and Learn2Reason, using Soccer and Visual-Genome dataset. 
 \Cref{table:stateofartSoc} lists results on Soccer. We find that (1) the average accuracy of our approach is higher than that of CNN+LSTM, HieCoAttenVQA and Learn2Reason by 20.35\%, 17.64\% and 15.67\%,  respectively; (2) our approach is typically effective in answering hard problems, \eg with improvement over 60\% for $Q_{nl6}$. 
 Consider that questions $Q_{nl8}-Q_{nl11}$ are all about field scene, while more than 90\% images of Soccer dataset are categorized as normal scene. For the fair comparison, we extract images that are categorized as one of four field scenes, and apply our approach over this subset of dataset. As shown in \cref{table:stateofartSoc}, our approach substantially outperforms others, which further verifies the advantage our approach preserves. 
-Results on Visual-Genome are given in \cref{table:stateofartVisGen}, from which we find: (1) for ``what'' and ``where'' questions, Learn2Reason performs best, while performances of four methods are quite close; (2) for ``how many'' questions, our method performs much better than others; and (3) the average accuracy our method  surpasses CNN+LSTM, HieCoAttenVQA and Learn2Reason by 12.93\%, 11.74\% and 9.7\%, respectively, which further verifies its advantage. 
+Results on Visual-Genome are given in \Cref{table:stateofartVisGen}, from which we find: (1) for ``what'' and ``where'' questions, Learn2Reason performs best, while performances of four methods are quite close; (2) for ``how many'' questions, our method performs much better than others; and (3) for average accuracy, our method surpasses CNN+LSTM, HieCoAttenVQA and Learn2Reason by 12.93\%, 11.74\% and 9.7\%, respectively, which further verifies its advantage. 
 \eat{
 To evaluate the generalization of the proposed scheme, we measure its accuracy on Visual Genome Dataset. Results in \cref{table:stateofartVisGen} show that our approach can handle different types of questions, and the overall performance of our approach surpasses CNN+LSTM, HieCoAttenVQA and Learn2Reason by 12.93\%, 11.74\% and 9.7\%, respectively.
 }
@@ -348,6 +353,7 @@ The results are listed in \cref{table:stateofartSoc}. The average accuracy using
 \end{table}
 %==========Table===================
 
+\vspace{-2ex}
 
 %==========Table===================
 \begin{table}[htbp]
@@ -368,5 +374,6 @@ The results are listed in \cref{table:stateofartSoc}. The average accuracy using
 	\end{center}
 	\vspace{-3ex}
 \end{table}
+\vspace{-1ex}
 %==========Table===================
 
