--- a/sections/sec-related.tex
+++ b/sections/sec-related.tex
@@ -1,10 +1,15 @@
 \section{Related Work}
 \label{sec-related-work}
 \hspace{-2ex}
-%Traditional approaches to the \vqa problem are mainly neural network based. In contrast, our approach consists of query understanding, query oriented object detection, and query answering. 
+
+\vspace{-3ex}
 We categorize related work into following three parts. %: visual query answering, visual objects, and graph-based query answering. %\looseness=-1
 
 
+\etitle{Visual query answering}. Currently, \vqa works are mainly based on deep neural networks. \cite{zhu2016visual7w} establishes a semantic link between captioning and image regions by object-level
+grounding with attention-based Model. Instead of computing the attention vector iteratively, \cite{xu2016ask} obtains a global spatial attention weights vector to stores neuron activations which is then used to generate a new image embedding. 
+Many other improvements are proposed based on the standard deep learning method, \eg Multimodal Compact Bilinear (MCB) pooling is introduced in \cite{fukui2016multimodal}, which efficiently and expressively combine multimodal features. Others focus on Neural Module Networks~\cite{Andreas_2016,hu2017learning}, which decomposes queries into their linguistic substructures, and such structures are used to dynamically instantiate module networks. \cite{teney2017graph} proposed the work of building graph over scene objects and question words. The visual graph is similar to ours, but with different query graph. Still, what the method \cite{teney2017graph} proposed is a neural network based, and the structured representations are fed into a recurrent network to form the final embedding and the answer is again inferred by a classifier. \looseness=-1
+\eat{
 \etitle{Visual query answering}. Current \vqa approaches are mainly based on deep neural works.  \cite{zhu2016visual7w} introduces a spatial attention mechanism similar to the model for image captioning. %In this method, a weight vector is computed and served as an additional input at each time step of the LSTM model. 
 Instead of computing the attention vector iteratively, \cite{xu2016ask} obtains a global spatial attention weights vector which is then used to generate a new image embedding. 
 \eat{
@@ -14,11 +19,11 @@ There has been many other improvements to the standard deep learning method, \eg
 \cite{fukui2016multimodal} utilized Multimodal Compact Bilinear (MCB) pooling to efficiently and expressively combine multimodal features. Another interesting idea is the implementation of Neural Module Networks~\cite{Andreas_2016,hu2017learning}, which decomposes queries into their linguistic substructures, and uses these structures to dynamically instantiate module networks. %Question-specific deep network is then assembled from these module networks that each solve one subtask. The layout of module networks can either be constructed from off-the-shelf parses~\cite{Andreas_2016}, or learned from the data~\cite{hu2017learning}.
 \cite{teney2017graph} proposed to build graph over scene objects and question words. The visual graph is similar to ours, but the query graph differs. %\cite{teney2017graph} exploits the grammatical relations between words to generate query graph, while our method applies directed acyclic graph to represent query sentence. 
 Note that the method \cite{teney2017graph} proposed is still a neural network based method as the structured representations are fed into a recurrent network to form the final embedding and the answer is again inferred by a classifier. %In contrast to recent works~\cite{Lu2015, Lu2016Hie}, we focus on single scene and involve reasoning. 
-
+}
 
 \etitle{Environment Exploration in Visual Field}. Reinforcement driven information acquisition is not only focusing on games~\cite{NIPS2017_7084,NIPS2002_2171,NIPS2017_7007} but also wildly applied in traditional vision domain.~\cite{DBLP:conf/cvpr/MathePS16} implement reinforcement learning in visual object detection, by presenting a novel sequential
 models which accumulate evidence collected at a small set of
-image locations to detect visual objects effectively.~\cite{DBLP:conf/cvpr/GoodrichA12} forms the facial detection problem into an adaptive learning process, by designing an approximate optimal control framework, based on reinforcement learning to actively search a visual field.~\cite{DBLP:conf/nips/MnihHGK14} proposed a novel recurrent neural network model which is capable to extract information from an image or video by adaptive selection for a sequence of regions or locations.~\cite{zhu2017icra} introduces reinforcement learning in the task of target-driven visual navigation. Other works aim at achieving {\color{red}XXX} based on algorithms~\cite{5596468,DBLP:conf/aaai/AbtahiF11}.
+image locations to detect visual objects effectively.~\cite{DBLP:conf/cvpr/GoodrichA12} forms the facial detection problem into an adaptive learning process, by designing an approximate optimal control framework, based on reinforcement learning to actively search a visual field.~\cite{DBLP:conf/nips/MnihHGK14} proposed a novel recurrent neural network model which is capable to extract information from an image or video by adaptive selection for a sequence of regions or locations.~\cite{zhu2017icra} introduces reinforcement learning in the task of target-driven visual navigation. Other works aim at achieving better performance based on algorithms~\cite{5596468,DBLP:conf/aaai/AbtahiF11}.
 
 In visual and language domain, relevant work like~\cite{DBLP:conf/cvpr/RenWZLL17} achieves image captioning with Embedding Reward. Reinforcement learning preserves ability to effectively select preferred actions, which benefits the system in decomposing the problem into a few sub-tasks.
 
